Fixed navbar menu on mobile

--- a/css/media.css
+++ b/css/media.css
@@ -48,7 +48,7 @@
     .navbar-menu {
         position: relative;
         display: inline-block;
-        padding-top: 10px;
+        padding-top:2px;
         width: 100%;
         text-align: center;
         z-index: 2;
@@ -269,7 +269,7 @@
         margin-bottom: 0
     }
     .headpage {
-        margin-top: 60px;
+        margin-top: 50px;
         padding-bottom: 20px;
     }
     .product-image-left {
